syntax = "proto3";

package proto;

import "users.proto";

message Note {
  string id = 1;
  string created = 2;
  string updated = 3;
  optional string deleted = 4;

  string userId = 5;
  string title = 6;
  string content = 7;

  User user = 8;
}

